diesel_compile_tests/tests/fail/as_changeset_bad_options.stderr
error: expected `=`
  --> $DIR/as_changeset_bad_options.rs:13:46
   |
13 | #[diesel(changeset_options(treat_none_as_null("true")))]
   |                                              ^

error: expected `=`
  --> $DIR/as_changeset_bad_options.rs:21:46
   |
21 | #[diesel(changeset_options(treat_none_as_null))]
   |                                              ^

error: expected boolean literal
  --> $DIR/as_changeset_bad_options.rs:29:49
   |
29 | #[diesel(changeset_options(treat_none_as_null = "foo"))]
   |                                                 ^^^^^

error: `changeset_options` is either unexpected or has bad format
  --> $DIR/as_changeset_bad_options.rs:45:10
   |
45 | #[diesel(changeset_options = "treat_none_as_null")]
   |          ^^^^^^^^^^^^^^^^^

error: `changeset_options` is either unexpected or has bad format
  --> $DIR/as_changeset_bad_options.rs:53:10
   |
53 | #[diesel(changeset_options)]
   |          ^^^^^^^^^^^^^^^^^
